cluster/prod/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: py-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapiv1
  labels:
    app: fastapi
  namespace: py-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      volumes:
        - name: sec-vol
          secret:
            secretName: accesstoken
        - name: hostmount   
          PersistentVolumeClaim:
            claimName: claim1
      containers:
        - name: pypod
          image: localhost:5001/py-app:1.4
          volumeMounts:
            - name: sec-vol
              mountPath: "/secret/"
            - name: hostmount
              mountPath: /file
      restartPolicy: Always
